[package]
name = "solpro-runner-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# erori / derive
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
chrono = "0.4"
colored = "2"

# async / http
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# utils
base64 = "0.22"
bs58 = "0.5"
lazy_static = "1"
bincode = "1.3"
itertools = "0.12"

# solana 1.18.x
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-transaction-status = "1.18.26"

# --- noi deps pentru polishing ---
# caching
dashmap = "5"              # cache thread-safe
once_cell = "1"            # lazy static init

# rate limiting
governor = "0.6"           # token-bucket limiter
rand = "0.8"
tower = { version = "0.4", features = ["retry", "limit"] }

# retry/backoff
backoff = "0.4"

# log & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1